4 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,9 @@
 <p>
   Start editing to see some magic happen :)
 </p>
+<div class = "products">
+  <app-product-card [product] = 'tv'> </app-product-card>
+  <app-product-card [product] = 'blueray'> </app-product-card>
+  <app-product-card [product] = 'gameConsole'></app-product-card>
+  <app-product-card [product] = 'mobile'></app-product-card>
+</div>
